--- a/nixie/nixie_app/templates/nixie_app/index.html
+++ b/nixie/nixie_app/templates/nixie_app/index.html
@@ -15,7 +15,7 @@
         position: absolute;
         right: 2px;
         top: -1px;
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 600;
         font-size: 16px;
@@ -90,7 +90,7 @@
 
     .menu li {
         margin-right: 5px;
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 300;
         font-size: 12px;
@@ -180,7 +180,7 @@
     }
 
     .contacts_row_2 li {
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 300;
         font-size: 16px;
@@ -190,7 +190,7 @@
     }
 
     .links_footer_li {
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 300;
         font-size: 14px;
@@ -213,7 +213,7 @@
     }
 
     .form_lable {
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 300;
         font-size: 18px;
@@ -227,7 +227,7 @@
     }
 
     .form_name {
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 400;
         font-size: 44px;
@@ -247,7 +247,7 @@
     }
 
     .form_info {
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 300;
         font-size: 12px;
@@ -266,7 +266,7 @@
     .smallfield {
         width: 500px;
         height: 30px;
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 300;
         font-size: 18px;
@@ -283,7 +283,7 @@
         min-height: 150px;
         max-width: 500px;
         max-height: 300px;
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 300;
         font-size: 18px;
@@ -297,7 +297,7 @@
         margin-top: 20px;
         width: 280px;
         height: 50px;
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 350;
         font-size: 24px;
@@ -312,7 +312,7 @@
         margin-top: 20px;
         width: 280px;
         height: 50px;
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 350;
         font-size: 24px;
@@ -342,13 +342,6 @@
         </li>
         <li class="header_buttons">
             <ul class="header_buttons_ul">
-                <li>
-                    <div class="search">
-                        <a>
-                            <img src="/images/search_logo.png" width="24" height="24"/>
-                        </a>
-                    </div>
-                </li>
                 <li>
                     <div class="telegram">
                         <a href="https://t.me/nsstnc">
@@ -483,7 +476,7 @@
                     <div>
                         <ul class="contacts_row_2">
                             <li>+7 927 964 12 44</li>
-                            <li>egorgolubev0484@mail.com</li>
+                            <li>egorgolubev0484@gmail.com</li>
                         </ul>
                     </div>
                 </li>
