--- a/nixie/cart/templates/cart/detail.html
+++ b/nixie/cart/templates/cart/detail.html
@@ -2,7 +2,7 @@
     .page_title {
         width: 100%;
         height: 100px;
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 300;
         font-size: 42px;
@@ -34,7 +34,7 @@
         list-style: none;
         margin-bottom: 0;
         margin-top: 0;
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 300;
         font-size: 20px;
@@ -66,7 +66,7 @@
     .num {
         margin-right: 30px;
         margin-left: auto;
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 600;
         font-size: 28px;
@@ -75,7 +75,7 @@
     }
 
     .count {
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 600;
         font-size: 28px;
@@ -182,7 +182,7 @@
         position: absolute;
         left: 10px;
         top: 10px;
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 300;
         font-size: 30px;
@@ -194,7 +194,7 @@
         position: absolute;
         top: 10px;
         right: 10px;
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 600;
         font-size: 28px;
@@ -203,7 +203,7 @@
     }
 
     .card_buy {
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         text-decoration: none;
         font-style: normal;
         font-weight: 400;
