--- a/nixie/nixie_app/templates/nixie_app/basket.html
+++ b/nixie/nixie_app/templates/nixie_app/basket.html
@@ -2,7 +2,7 @@
     .page_title {
         width: 100%;
         height: 100px;
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 300;
         font-size: 42px;
