--- a/nixie/nixie_app/templates/nixie_app/catalog.html
+++ b/nixie/nixie_app/templates/nixie_app/catalog.html
@@ -3,7 +3,7 @@
     .page_title {
         width: 100%;
         height: 100px;
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 300;
         font-size: 42px;
@@ -40,7 +40,7 @@
         background: #181818;
         margin-right: 5px;
 
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 300;
         font-size: 14px;
@@ -65,7 +65,7 @@
 
     .filter, .show_button, .reset_button {
         margin-right: 20px;
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 300;
         font-size: 16px;
@@ -149,7 +149,7 @@
     }
 
     .card_title {
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 300;
         font-size: 17px;
@@ -163,7 +163,7 @@
     }
 
     .card_price {
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 600;
         font-size: 30px;
@@ -181,7 +181,7 @@
 
     .card_add,
     .card_buy {
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 300;
         font-size: 18px;
@@ -195,7 +195,7 @@
         border: 1px solid black;
         cursor: pointer; /* Меняем курсор при наведении */
         margin-top: auto;
-        text-decoration: none/* Прижимаем кнопку к низу карточки */
+        text-decoration: none /* Прижимаем кнопку к низу карточки */
     }
 
     .card_add {
@@ -215,7 +215,7 @@
     .form-control {
         background: #181818;
         border: 0;
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 300;
         font-size: 14px;
@@ -223,26 +223,8 @@
         color: #DC7A33;
     }
 
-    .view_ul {
-        display: flex;
-        flex-flow: row nowrap;
-        padding: 0;
-        list-style: none;
-    }
-
-    .view_ul li {
-        margin-right: 20px;
-        margin-left: 30%;
-    }
-
-    .view_ul li:last-child {
-        margin-right: 0px;
-        margin-left: auto;
-    }
-
-
     .show_button {
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 300;
         font-size: 16px;
@@ -255,7 +237,7 @@
 
     .show_button:active,
     .show_button:hover {
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 300;
         font-size: 16px;
@@ -297,22 +279,7 @@
                 </a>
             {% endif %}
         </form>
-        <ul class="view_ul">
-            <li>
-                <div class="card_view">
-                    <a>
-                        <img src="/images/card_view.png" width="24" height="24"/>
-                    </a>
-                </div>
-            </li>
-            <li>
-                <div class="string_view">
-                    <a>
-                        <img src="/images/string_view.png" width="24" height="24"/>
-                    </a>
-                </div>
-            </li>
-        </ul>
+
     </section>
     <section class="selected_filters">
         {% for filter in current_filters %}
@@ -325,35 +292,36 @@
     <section class="catalog">
         <div class="cards">
             {% for product in filter.qs %}
-                <div class="card">
-                    <!-- Верхняя часть -->
-                    <div class="card_top">
-                        <!-- Изображение-ссылка товара -->
-                        <a href="{{ product.get_absolute_url }}" class="card_image">
-                            <img src="
-                                    {% if product.image1 %}{{ product.image1.url }}{% else %}{{ "/images/sample.png" }}{% endif %}"/>
-                        </a>
-                    </div>
-                    <!-- Нижняя часть -->
-                    <div class="card_bottom">
-                        <!-- Ссылка-название товара -->
-                        <a href="{{ product.get_absolute_url }}" class="card_title">
-                            {{ product.name }}
-                        </a>
-                        <!-- Цена на товар -->
-                        <div class="card_price">
-                            {{ product.price }} руб.
-                        </div>
+                    <div class="card">
+                        <!-- Верхняя часть -->
+                        <div class="card_top">
+                            <!-- Изображение-ссылка товара -->
+                            <a href="{{ product.get_absolute_url }}" class="card_image">
+                                <img src="
 
-                        <!-- Кнопки купить и добавить в корзину -->
-                        <a href="{% url "orders:order_create_one" product.id %}" class="card_buy">Купить</a>
-                        <form action="{% url "cart:cart_add" product.id %}" method="post">
-                            {{ cart_product_form }}
-                            {% csrf_token %}
-                            <button type="submit" class="card_add">Добавить в корзину</button>
-                        </form>
+                                        {% if product.image1 %}{{ product.image1.url }}{% else %}{{ "/images/sample.png" }}{% endif %}"/>
+                            </a>
+                        </div>
+                        <!-- Нижняя часть -->
+                        <div class="card_bottom">
+                            <!-- Ссылка-название товара -->
+                            <a href="{{ product.get_absolute_url }}" class="card_title">
+                                {{ product.name }}
+                            </a>
+                            <!-- Цена на товар -->
+                            <div class="card_price">
+                                {{ product.price }} руб.
+                            </div>
+
+                            <!-- Кнопки купить и добавить в корзину -->
+                            <a href="{% url "orders:order_create_one" product.id %}" class="card_buy">Купить</a>
+                            <form action="{% url "cart:cart_add" product.id %}" method="post">
+                                {{ cart_product_form }}
+                                {% csrf_token %}
+                                <button type="submit" class="card_add">Добавить в корзину</button>
+                            </form>
+                        </div>
                     </div>
-                </div>
             {% endfor %}
         </div>
     </section>
