--- a/nixie/nixie_app/templates/nixie_app/detail.html
+++ b/nixie/nixie_app/templates/nixie_app/detail.html
@@ -2,7 +2,7 @@
     .page_title {
         width: 100%;
         height: 100px;
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 300;
         font-size: 42px;
@@ -39,7 +39,7 @@
     }
 
     .description h3 {
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 600;
         font-size: 32px;
@@ -50,7 +50,7 @@
     }
 
     .description p, ul {
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 300;
         font-size: 18px;
@@ -133,7 +133,7 @@
     }
 
     .name {
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 300;
         font-size: 24px;
@@ -143,7 +143,7 @@
 
     .price {
         margin-top: 10px;
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 600;
         font-size: 48px;
@@ -171,7 +171,7 @@
 
     .card_add,
     .card_buy {
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 400;
         font-size: 24px;
