--- a/nixie/nixie_app/templates/nixie_app/portfolio.html
+++ b/nixie/nixie_app/templates/nixie_app/portfolio.html
@@ -2,7 +2,7 @@
     .page_title {
         width: 100%;
         height: 100px;
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 300;
         font-size: 42px;
@@ -11,10 +11,76 @@
         color: #DC7A33;
         line-height: 100px;
     }
+
+    .portfolio_section {
+        width: 100%;
+        background: #181818;
+    }
+
+    .portfolio_div {
+        width: 80%;
+        margin-right: auto;
+        margin-left: auto;
+        padding-bottom: 100px;
+    }
+
+    .string {
+        width: 100%;
+        padding-top: 50px;
+        display: flex;
+        flex-direction: row;
+        height: 400px;
+    }
+    .frame_one,
+    .frame_two,
+    .frame_three,
+    .frame_four,
+    .frame_five {
+        display: block;
+        margin: 0px 10px 0px 0px;
+    }
+
+    .frame_one {
+        width: 500px;
+        height: calc(100% + 10px);
+    }
+
+    .frame_one > img,
+    .frame_two > img,
+    .frame_three > img,
+    .frame_four > img,
+    .frame_five > img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover; /* Встраиваем картинку в контейнер card__image */
+        transition: 0.2s;
+    }
+    .frame_two{
+        width: 70%;
+    }
+    .frame_five{
+        width: 70%;
+    }
+    .right{
+        display: flex;
+        flex-direction: column;
+        height: 100%
+    }
+    .right_top{
+        height: 60%;
+        display: flex;
+        flex-direction: row;
+        margin-bottom: 10px;
+    }
+    .right_bottom{
+        height: 40%;
+        display: flex;
+        flex-direction: row;
+    }
 </style>
 {% extends 'nixie_app/index.html' %}
 {% block 'title' %} Портфолио{% endblock %}
-{% block nav_portfolio%}
+{% block nav_portfolio %}
     class="active"
 {% endblock %}
 
@@ -22,5 +88,102 @@
     <section class="page_title">
         <a>Портфолио</a>
     </section>
+    <section class="portfolio_section">
+        <div class="portfolio_div">
+            <div class="string">
+                <div class="frame_one">
+                    <img src="/images/products/{{ images_names.0 }}">
+                </div>
+                <div class="right">
+                    <div class="right_top">
+                        <div class="frame_two">
+                            <img src="/images/products/{{ images_names.1 }}">
+                        </div>
+                        <div class="frame_three">
+                            <img src="/images/products/{{ images_names.2 }}">
+                        </div>
+                    </div>
+                    <div class="right_bottom">
+                        <div class="frame_four">
+                            <img src="/images/products/{{ images_names.3 }}">
+                        </div>
+                        <div class="frame_five">
+                            <img src="/images/products/{{ images_names.4 }}">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="string">
 
+                <div class="right">
+                    <div class="right_top">
+                        <div class="frame_two">
+                            <img src="/images/products/{{ images_names.6 }}">
+                        </div>
+                        <div class="frame_three">
+                            <img src="/images/products/{{ images_names.7 }}">
+                        </div>
+                    </div>
+                    <div class="right_bottom">
+                        <div class="frame_four">
+                            <img src="/images/products/{{ images_names.8 }}">
+                        </div>
+                        <div class="frame_five">
+                            <img src="/images/products/{{ images_names.9 }}">
+                        </div>
+                    </div>
+                </div>
+                <div class="frame_one">
+                    <img src="/images/products/{{ images_names.5 }}">
+                </div>
+            </div>
+            <div class="string">
+                <div class="frame_one">
+                    <img src="/images/products/{{ images_names.10 }}">
+                </div>
+                <div class="right">
+                    <div class="right_top">
+                        <div class="frame_two">
+                            <img src="/images/products/{{ images_names.11 }}">
+                        </div>
+                        <div class="frame_three">
+                            <img src="/images/products/{{ images_names.12 }}">
+                        </div>
+                    </div>
+                    <div class="right_bottom">
+                        <div class="frame_four">
+                            <img src="/images/products/{{ images_names.13 }}">
+                        </div>
+                        <div class="frame_five">
+                            <img src="/images/products/{{ images_names.14 }}">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="string">
+
+                <div class="right">
+                    <div class="right_top">
+                        <div class="frame_two">
+                            <img src="/images/products/{{ images_names.16 }}">
+                        </div>
+                        <div class="frame_three">
+                            <img src="/images/products/{{ images_names.17 }}">
+                        </div>
+                    </div>
+                    <div class="right_bottom">
+                        <div class="frame_four">
+                            <img src="/images/products/{{ images_names.18 }}">
+                        </div>
+                        <div class="frame_five">
+                            <img src="/images/products/{{ images_names.19 }}">
+                        </div>
+                    </div>
+                </div>
+                <div class="frame_one">
+                    <img src="/images/products/{{ images_names.15 }}">
+                </div>
+            </div>
+        </div>
+    </section>
 {% endblock %}
