--- a/nixie/nixie_app/templates/nixie_app/questions.html
+++ b/nixie/nixie_app/templates/nixie_app/questions.html
@@ -2,7 +2,7 @@
     .page_title {
         width: 100%;
         height: 100px;
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 300;
         font-size: 42px;
@@ -11,10 +11,63 @@
         color: #DC7A33;
         line-height: 100px;
     }
+
+    .questions_section {
+        width: 100%;
+        background: #181818;
+    }
+
+    .questions_div {
+        width: 80%;
+        margin-right: auto;
+        margin-left: auto;
+        padding-bottom: 50px;
+        margin-bottom: 50px;
+    }
+
+    .info_string_left,
+    .info_string_right {
+        width: 70%;
+        padding-top: 100px;
+    }
+    .info_string_left:first-child{
+        padding-top: 50px;
+    }
+    .info_string_right div {
+        text-align: right;
+    }
+    .info_string_right {
+        margin-left:auto;
+        margin-right: 0;
+    }
+
+    .info_string_top {
+        width: 100%;
+        font-family: 'GOST Common';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 42px;
+        align-items: center;
+        text-align: left;
+        color: #DC7A33;
+        margin-bottom: 25px;
+    }
+
+    .info_string_center {
+        width: 100%;
+        font-family: 'GOST Common';
+        font-style: normal;
+        font-weight: 300;
+        font-size: 18px;
+        align-items: center;
+        text-align: left;
+        color: #ffffff;
+    }
+
 </style>
 {% extends 'nixie_app/index.html' %}
 {% block 'title' %}Часто задаваемые вопросы {% endblock %}
-{% block nav_questions%}
+{% block nav_questions %}
     class="active"
 {% endblock %}
 
@@ -23,4 +76,67 @@
         <a>Часто задаваемые вопросы</a>
     </section>
 
+    <section class="questions_section">
+        <div class="questions_div">
+            <div class="info_string_left">
+                <div class="info_string_top">
+                    Можно ли заказать собственный дизайн?
+                </div>
+                <div class="info_string_center">
+                    Все варианты обсуждаемы, Вы можете связаться с
+                    нами в социальных сетях, по телефону или по почте,
+                    и предложить свой вариант дизайна часов.
+                </div>
+            </div>
+            <div class="info_string_right">
+                <div class="info_string_top">Что делать, если часы сломаются?
+                </div>
+                <div class="info_string_center">
+                    Электроника, которая используется в наших часах точна и надежна, а также локализована, т.е.
+                    производится в России.
+                    А лампы тщательно подбираются и проверяются, перегорание крайне маловероятно.
+                    Если все же поломка произойдет, Вам следует обратиться к нам, далее вместе с Вами будем решать
+                    вопрос о ремонте или замене часов.
+                </div>
+            </div>
+            <div class="info_string_left">
+                <div class="info_string_top">
+                    Как долго часы могут помнить время без электроэнергии?
+                </div>
+                <div class="info_string_center">
+                    Это зависит от конкретной модели часов, но как минимум 1-2 недели.
+                </div>
+            </div>
+            <div class="info_string_right">
+                <div class="info_string_top">
+                    Почему такие цены?
+                </div>
+                <div class="info_string_center">
+                    Цены формируются исходя из качества выполняемой нами работы, у нас налажена поставка электроники
+                    отечественного производства (не AliExpress), тщательно подбираются лампы, вручную изготавливаются
+                    корпуса, а готовые часы тестируются в течение нескольких дней. Именно за такой профессиональный
+                    подход Вы отдаете свои деньги.
+                </div>
+            </div>
+            <div class="info_string_left">
+                <div class="info_string_top">
+                    Есть ли защита от воды?
+                </div>
+                <div class="info_string_center">
+                    Часы НЕ ЯВЛЯЮТСЯ водонепроницаемыми. Однако корпус покрыт маслом с добавлением карнаубского воска,
+                    который защищает древесину от впитывания влаги.
+                </div>
+            </div>
+            <div class="info_string_right">
+                <div class="info_string_top">
+                    Часы начали отставать. Что делать?
+                </div>
+                <div class="info_string_center">
+                    Самая распространенная причина - севшая батарейка в плате управления, Вам нужно ее заменить.
+                    Свяжитесь с нами и мы пришлем Вам инструкцию по разборке часов. Либо можете прислать нам часы и
+                    произведем необходимые действия.
+                </div>
+            </div>
+        </div>
+    </section>
 {% endblock %}
