--- a/nixie/nixie_app/templates/nixie_app/reviews.html
+++ b/nixie/nixie_app/templates/nixie_app/reviews.html
@@ -2,7 +2,7 @@
     .page_title {
         width: 100%;
         height: 100px;
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 300;
         font-size: 42px;
@@ -11,15 +11,106 @@
         color: #DC7A33;
         line-height: 100px;
     }
+
+    .review_button {
+        font-family: 'GOST Common';
+        text-decoration: none;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 24px;
+        display: block;
+        width: 250px;
+        height: auto;
+        color: #181818;
+        background: #DC7A33;
+        text-align: center;
+        border: 2px solid #DC7A33;
+        cursor: pointer; /* Меняем курсор при наведении */
+        margin: 20px auto 20px auto;
+
+    }
+
+    .review_button:hover {
+        color: #DC7A33;
+        background: #181818;
+        border: 2px solid #DC7A33;
+    }
+
+    .review_section {
+        width: 100%;
+        background: #181818;
+        padding-top: 20px;
+    }
+
+    .review_div {
+        display: grid;
+        grid-template-columns: 50% 50%;
+        width: 80%;
+        max-width: 1000px; /* Ширина grid-контейнера */
+        justify-content: left;
+        justify-items: left; /* Размещаем карточку по центру */
+        column-gap: 50px; /* Отступ между колонками */
+        row-gap: 50px; /* Отступ между рядами */
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 50px;
+        padding-bottom: 50px;
+    }
+
+    .card {
+        width: 100%;
+        display: flex;
+        flex-direction: column; /* Размещаем элементы в колонку */
+        transition: 0.2s;
+
+    }
+    .card_top{
+        width: 100%;
+        font-family: 'GOST Common';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 42px;
+        align-items: center;
+        text-align: left;
+        color: #DC7A33;
+        margin-bottom: 10px;
+        padding-bottom: 10px;
+        border-bottom: 2px solid #DC7A33;
+    }
+    .card_bottom{
+        width: 100%;
+        font-family: 'GOST Common';
+        font-style: normal;
+        font-weight: 300;
+        font-size: 18px;
+        align-items: center;
+        text-align: left;
+        color: #ffffff;
+    }
 </style>
 {% extends 'nixie_app/index.html' %}
 {% block 'title' %}Отзывы {% endblock %}
-{% block nav_reviews%}
+{% block nav_reviews %}
     class="active"
 {% endblock %}
 
 {% block 'page_content' %}
     <section class="page_title">
         <a>Отзывы</a>
+    </section>
+    <section class="review_section">
+        <a href="{% url 'reviews-create' %}" class="review_button">Написать отзыв</a>
+        <div class="review_div">
+            {% for review in reviews %}
+                <div class="card">
+                    <div class="card_top">
+                        {{ review.name }} {{ review.surname }}
+                    </div>
+                    <div class="card_bottom">
+                        {{ review.review_text }}
+                    </div>
+
+                </div>
+            {% endfor %}
     </section>
 {% endblock %}
