--- a/nixie/orders/templates/orders/order/created.html
+++ b/nixie/orders/templates/orders/order/created.html
@@ -2,7 +2,7 @@
     .page_title {
         width: 100%;
         height: 100px;
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 300;
         font-size: 42px;
@@ -24,7 +24,7 @@
 
     .cart_section p {
         color: #DC7A33;
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-weight: 300;
         font-size: 42px;
         line-height: 44px;
@@ -33,14 +33,16 @@
     .button {
         width: 280px;
         height: 50px;
-        font-family: 'Bahnschrift';
+        font-family: 'GOST Common';
         font-style: normal;
         font-weight: 350;
         font-size: 24px;
         line-height: 50px;
         color: #181818;
         background: #DC7A33;
-        border-width: 0;
+        border-width: 2px;
+        border-color: #DC7A33;
+        border-style: solid;
         text-decoration: none;
         text-align: center;
         margin: 50px;
