--- a/nixie/orders/templates/orders/order/create.html
+++ b/nixie/orders/templates/orders/order/create.html
@@ -116,7 +116,13 @@
         justify-content: right;
         align-items: end;
     }
-
+    .field{
+        width: 280px;
+        height: 30px;
+        font-family: 'GOST Common';
+        color: #181818;
+        font-size: 18px;
+    }
 </style>
 
 {% extends 'nixie_app/index.html' %}
