--- a/nixie/nixie_app/templates/nixie_app/main.html
+++ b/nixie/nixie_app/templates/nixie_app/main.html
@@ -416,6 +416,7 @@
         flex-direction: column;
         justify-content: center;
         justify-items: center;
+        overflow-x: hidden
     }
 
     .stages_div {
@@ -425,6 +426,7 @@
         justify-content: center;
         justify-items: center;
         margin: 50px auto 100px auto;
+        overflow-x: hidden
     }
 
     .stages_one,
@@ -437,6 +439,7 @@
         justify-content: center;
         justify-items: center;
         margin-top: 100px;
+        overflow-x: hidden
     }
 
     .stages_head {
