--- a/nixie/nixie_app/templates/nixie_app/catalog.html
+++ b/nixie/nixie_app/templates/nixie_app/catalog.html
@@ -107,6 +107,7 @@
         position: relative;
         background: #181818;
         border: 1px solid black;
+        border-radius: 10px;
     }
 
     .card_top {
@@ -114,6 +115,7 @@
         position: relative;
         overflow: hidden; /* Скрываем, что выходит за пределы */
         margin: 10px 10px 0 10px;
+        border-radius: 10px;
     }
 
     .card_image {
@@ -195,7 +197,8 @@
         border: 1px solid black;
         cursor: pointer; /* Меняем курсор при наведении */
         margin-top: auto;
-        text-decoration: none /* Прижимаем кнопку к низу карточки */
+        text-decoration: none; /* Прижимаем кнопку к низу карточки */
+        border-radius: 10px;
     }
 
     .card_add {
@@ -233,6 +236,7 @@
         background: #DC7A33;
         border-width: 1px;
         border-color: #DC7A33;
+        border-radius: 5px;
     }
 
     .show_button:active,
