--- a/nixie/nixie_app/templates/nixie_app/detail.html
+++ b/nixie/nixie_app/templates/nixie_app/detail.html
@@ -167,6 +167,7 @@
         height: 100%;
         object-fit: cover; /* Встраиваем картинку в контейнер card__image */
         transition: 0.2s;
+        border-radius: 10px;
     }
 
     .card_add,
@@ -187,6 +188,7 @@
         margin-top: 5px; /* Прижимаем кнопку к низу карточки */
         text-decoration: none;
         left: 0;
+        border-radius: 10px;
     }
 
     .card_add {
