--- a/nixie/nixie_app/templates/nixie_app/info.html
+++ b/nixie/nixie_app/templates/nixie_app/info.html
@@ -71,6 +71,7 @@
         height: 100%;
         object-fit: cover; /* Встраиваем картинку в контейнер card__image */
         transition: 0.2s;
+        border-radius: 10px;
     }
     .info_string:last-child .frame_photo{
         height: 400px;
