--- a/nixie/nixie_app/templates/nixie_app/portfolio.html
+++ b/nixie/nixie_app/templates/nixie_app/portfolio.html
@@ -54,6 +54,7 @@
         height: 100%;
         object-fit: cover; /* Встраиваем картинку в контейнер card__image */
         transition: 0.2s;
+        border-radius: 10px;
     }
     .frame_two{
         width: 70%;
