--- a/nixie/orders/templates/orders/order/create.html
+++ b/nixie/orders/templates/orders/order/create.html
@@ -33,6 +33,7 @@
         margin-left: 10px;
         position: relative;
         flex-flow: column;
+        border-radius: 10px;
     }
 
     .right_div p {
@@ -67,6 +68,7 @@
         border: 2px solid #DC7A33;
         position: relative;
         flex-flow: row;
+        border-radius: 10px;
     }
 
     .left_image {
@@ -87,6 +89,7 @@
         color: #181818;
         background: #DC7A33;
         border-width: 0;
+        border-radius: 10px;
     }
 
     .pay_button:active,
@@ -122,6 +125,8 @@
         font-family: 'GOST Common';
         color: #181818;
         font-size: 18px;
+        border-radius: 5px;
+        border: 0;
     }
 </style>
 
