--- a/nixie/cart/templates/cart/detail.html
+++ b/nixie/cart/templates/cart/detail.html
@@ -93,6 +93,7 @@
         background: #181818;
         border: 2px solid #DC7A33;
         margin-bottom: 10px;
+        border-radius: 10px;
     }
 
     .card_left {
@@ -100,6 +101,7 @@
         position: relative;
         overflow: hidden; /* Скрываем, что выходит за пределы */
         margin: 5px 10px 5px 5px;
+        border-radius: 10px;
     }
 
     .card_right {
@@ -168,6 +170,7 @@
         margin-left: 10px;
         position: relative;
         flex-flow: column;
+        border-radius: 10px;
     }
 
     .total {
@@ -215,13 +218,14 @@
         position: absolute;
         padding: 7px;
         text-align: center;
-        border: 0;
+        border: 2px solid #DC7A33;
         cursor: pointer; /* Меняем курсор при наведении */
         bottom: 10px;
         margin-left: auto;
         margin-right: auto;
         left: 0;
         right: 0;
+        border-radius: 10px;
     }
     .card_buy:hover {
         color: #DC7A33;
